# cpu-rasterizer

./: .clang-format  CMakeLists.txt  README.md
include/rasterizer/: draw_command.hpp  image_view.hpp  mesh.hpp  renderer.hpp  settings.hpp  types.hpp
source/: main.cpp  renderer.cpp
